# solcam

./: .gitattributes  .gitignore  0508수정내역.txt  0511수정내역.txt  0524수정내역.txt  0603수정내역.txt  0604수정내역.txt  0611_드라이버통합_할일.txt  0611수정내역.txt  0612수정.txt  0615수정.txt  0618_로봇브링업_체크리스트.txt  0623캘리브레이션할것.txt  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  SolCam_manual.txt  test_tracking.py  tum_publisher.py  viz_overlay.py  viz_topdown.py  드라이버_실측_체크리스트.md  상단yaw_캘리브레이션.md  우분투_브링업.md  인계_새대화방용.md  잿슨_빌드인계.md  제어로직.md  튜닝_파라미터.txt
Output/: .gitkeep
_bak_0524/: BYTETracker.cpp  BYTETracker.h  KalmanFilter.cpp  KalmanFilter.h  STrack.cpp  STrack.h  oak_detector.py.0525bak
data/YOLOX_ncnn_palace/: detection_results.json  tracking_results.json
driver_firmware/: .cproject  .project  README.md  YAW_점검.md  yaw.ioc
driver_firmware/Core/Inc/: stm32f4xx_it.h
driver_firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  Rect.h  STrack.h  tracker_c_api.h
jackal_scripts/: CHEATSHEET.txt  COMMANDS.txt  LAPTOP_SETUP.txt  TOMORROW.md  lawnmower.py  square.py  tilt_control.py  yaw_helpers.py
ros2_control_node/: CMakeLists.txt  README.md  package.xml
ros2_control_node/config/: control_params.yaml
ros2_control_node/include/control_node/: control_node.hpp  controller.hpp  controller_base.hpp  follow2_controller.hpp  follow_controller.hpp  idle_controller.hpp  obstacle_field.hpp  orbit_controller.hpp  params.hpp  pid.hpp  rotate_controller.hpp  state_estimator.hpp  types.hpp
ros2_control_node/launch/: control.launch.py
ros2_control_node/msg/: AdjustCmd.msg  ControlCmd.msg  ControlDebug.msg  ProximityArray.msg
ros2_control_node/scripts/: control_monitor.py  fake_odom.py  fake_owner.py  teleop_keyboard.py
ros2_control_node/src/: control_node.cpp  controller_base.cpp  follow2_controller.cpp  follow_controller.cpp  idle_controller.cpp  main.cpp  obstacle_field.cpp  orbit_controller.cpp  pid.cpp  rotate_controller.cpp  state_estimator.cpp  types.cpp
ros2_control_node/test/: realism_check.cpp  test_sim.cpp
ros2_control_node/tools/: control_sim.py
ros2_driver_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_driver_bridge/config/: driver_params.yaml
ros2_driver_bridge/launch/: driver.launch.py
ros2_driver_bridge/ros2_driver_bridge/: driver_bridge.py
ros2_driver_bridge/scripts/: calib_cpr.py
ros2_driver_bridge/test/: test_protocol.py
ros2_follow_node/: CMakeLists.txt  package.xml
ros2_follow_node/config/: follow_params.yaml
ros2_follow_node/launch/: follow.launch.py  follow_pipeline.launch.py
ros2_follow_node/src/: follow_node.cpp  mecanum_driver.cpp
ros2_gesture_node/: README.md  package.xml  setup.cfg  setup.py
ros2_gesture_node/config/: gesture_params.yaml
ros2_gesture_node/launch/: gesture.launch.py
ros2_gesture_node/models/: .gitignore  README.md  download.sh
ros2_gesture_node/ros2_gesture_node/: gesture_node.py  hud.py  menu.py  recognizer.py  ui_node.py
ros2_gesture_node/test/: test_menu.py
ros2_gesture_node/tools/: ui_preview.py  ui_preview_tk.py
ros2_phone_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_phone_bridge/launch/: phone.launch.py
ros2_phone_bridge/ros2_phone_bridge/: phone_bridge.py  util.py
ros2_phone_bridge/scripts/: setup_v4l2loopback.sh  start_scrcpy_camera.sh
ros2_phone_bridge/test/: test_battery_parse.py
ros2_tracking_node/: CMakeLists.txt  package.xml
ros2_tracking_node/config/: tracking_params.yaml
ros2_tracking_node/launch/: solcam_silhum.launch.py  tracking.launch.py
ros2_tracking_node/msg/: Detection.msg  OwnerPose.msg
ros2_tracking_node/src/: tracking_node.cpp
ros2_yolo_d435i/: package.xml  setup.cfg  setup.py
ros2_yolo_d435i/resource/: ros2_yolo_d435i
ros2_yolo_d435i/ros2_yolo_d435i/: yolo_detector.py
ros2_yolo_oak/: README.md  package.xml  setup.cfg  setup.py
ros2_yolo_oak/config/: oak_params.yaml
ros2_yolo_oak/launch/: oak_tracking.launch.py
ros2_yolo_oak/resource/: ros2_yolo_oak
ros2_yolo_oak/ros2_yolo_oak/: __init__.py  oak_detector.py  oak_viz.py
scripts/: reset_v4l2.sh  setup_nopasswd.sh  solcam.sh  solcam.sudoers
scripts/desktop/: Install_Windows_Icon.bat  SolCam_UI_preview.bat  install_desktop.sh
src/: BYTETracker.cpp  KalmanFilter.cpp  Object.cpp  Rect.cpp  STrack.cpp  tracker_c_api.cpp
test/: test_BYTETracker.cpp
test/oak_check/: capture_check.py  det_isolate.py  live_view.py  live_yolo.py  v6_final_test.py  v8_test.py  viz_dataset.py  viz_owner.py  viz_tracking_yaw.py  yolo_headless_test.py
test/oak_check/.depthai_cached_models/261c91efca137412f0383ecf67a8f90d1e918429/: metadata.yaml
test/oak_check/.depthai_cached_models/d24c419a6961ed9730165f6bfcad99d43418bad8/: metadata.yaml
