<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_follow_node</name>
  <version>0.1.0</version>
  <description>주인 위치 기반 메카넘 휠 + 승강부 제어 ROS2 노드</description>
  <maintainer email="todo@todo.com">jw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_tracking_node</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
