<?xml version="1.0"?>
<package format="3">
  <name>ros2_yolo_d435i</name>
  <version>0.1.0</version>
  <description>D435i RGB+Depth → YOLO → DetectionArray</description>
  <maintainer email="todo@todo.com">jw</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros2_tracking_node</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
