<?xml version="1.0"?>
<package format="3">
  <name>ros2_yolo_oak</name>
  <version>0.1.0</version>
  <description>OAK-D S2 온보드 YOLO (SpatialDetectionNetwork) → DetectionArray + CameraInfo</description>
  <maintainer email="todo@todo.com">jw</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros2_tracking_node</depend>

  <!-- depthai 파이썬 패키지는 pip로 설치 (rosdep 키 없음). README 참고. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
